# slint-with-kdbindings

./: .gitignore  CMakeLists.txt  README.md
src/: backend_controller.cpp  backend_controller.h  main.cpp  undostack_model.cpp  undostack_model.h
ui/: appwindow.slint
